# Mono-AI-Tools

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  start_all.sh
agentic-answers/: README.md  pyproject.toml
agentic-answers/agentic_answers/: agent_workflow.py  config.py  main.py  prompts.py  start_server.py  test.py
agentic-answers/agentic_answers/dtos/: request.py
apps/agentic-answers/: agent_workflow.py  config.py  main.py  pyproject.toml
apps/agentic-answers/dtos/: response.py
apps/image-generation-api/: main.py
apps/image-generation-server/: README.md  main.py  models.py  pyproject.toml
apps/knowledge-base-web-crawler/: README.md  main.py  pyproject.toml
apps/rag-server/: README.md  config.py  main.py  pyproject.toml
apps/rag-server/dtos/: responses.py
apps/tts-server/: README.md  main.py  pyproject.toml
audio-server/: README.md  pyproject.toml
audio-server/audio_server/: config.py  main.py  voice_loader.py
audio-server/audio_server/dtos/: requests.py  responses.py
libs/: pyproject.toml
libs/shared/chroma/: chroma_client.py  chroma_client_config.py
libs/shared/embedding/: embedding_client.py
libs/shared/rag/: rag_client.py
libs/shared/web_search/: search_result.py
rag-server/: README.md  pyproject.toml
rag-server/rag_server/: main.py
rag-server/rag_server/dtos/: requests.py
shared/: pyproject.toml
shared/shared/: get_env.py
shared/shared/chroma/: chroma_client.py
shared/shared/embedding/: embedding_client_config.py
shared/shared/rag/: rag_client.py
shared/shared/web_search/: ddg_search.py
web-scraper/: README.md  pyproject.toml
web-scraper/tests/: test_scraper.py
web-scraper/web_scraper/: config.py  main.py  scraper.py
web-scraper/web_scraper/dtos/: requests.py  responses.py
