[project]
name = "mono-mcp-repo"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "shared",
    "rag-server",
    "agentic-answers"
]

[tool.uv.sources]
shared = { workspace = true }
rag-server = { workspace = true }
agentic-answers = { workspace = true }

[tool.uv.workspace]
members = [
  "apps/agentic-answers",
  "apps/rag-server",
  "libs",
]