[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "audio_server"
readme = "README.md"
requires-python = "~3.12"
dependencies = [
    "shared",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "piper-tts (>=1.3.0,<2.0.0)"
]


[tool.poetry]
packages = [
    { include = "audio_server", from = "." }
    { include = "shared", from = "../shared" },
]
version = "0.0.0"

[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "../"
version-pinning-rule = '=='  