[project]
name = "shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.17",
    "ddgs>=9.5.2",
    "ollama>=0.5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
packages = ["shared/*"]
