[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "web_scraper"
readme = "README.md"
requires-python = "~3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1"
]


[tool.poetry]
packages = [
    { include = "web_scraper", from = "." },
]
version = "0.0.0"


[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "../"
version-pinning-rule = '=='  