[project]
name = "image-generation-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.8.0",
    "diffusers[torch]>=0.35.2",
    "pytorch-triton-rocm",
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "transformers>=4.55.4",
    "uvicorn>=0.37.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-rocm" },
]
torchvision = [
  { index = "pytorch-rocm" },
]
# ROCm6 support relies on `pytorch-triton-rocm`, which should also be installed from the PyTorch index
pytorch-triton-rocm = [
  { index = "pytorch-rocm" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true
